# autocode

./: .env.example  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
autocode/: __init__.py  container.py  controller.py  dashboard.py  database.db  datastore.py  gateway.py  model.py  router.py  setting.py  use_case.py
benchmark/: Dockerfile  docker-compose.yml  optimization_algorithm.ipynb  optimization_bayesian.ipynb  requirements.txt
example/: app.py  client-compose.yml  controller.ipynb  controller.py  controller2.py  database.db  requirements.txt
example/client/: docker-compose.yml
example/client/app_account/: .Dockerfile  go.mod  go.sum  main.go
example/client/app_account/src/: controller.go  datastore.go  model.go
example/client/app_account/test/: main_test.go
example/client/app_gateway/: go.mod  go.sum  main.go
example/client/app_gateway/src/: container.go  controller.go  datastore.go  model.go
example/client/app_gateway/test/: main_test.go
example/client/app_product/: go.mod  go.sum
example/client/app_product/src/: container.go  controller.go  model.go
example/client/app_product/test/: main_test.go
